A division of polynomials was added. Some things fixed.

--- a/08-EncapsulationInheritancePolymorphism/WorkingWithPolynomials/WorkingWithPolynomials.csproj
+++ b/08-EncapsulationInheritancePolymorphism/WorkingWithPolynomials/WorkingWithPolynomials.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Polynomial.cs" />
+    <Compile Include="PolynomialDivisionResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
