--- a/11-DelegatesLambdasEvents/CountDownTestCA/CountDownTestCA.csproj
+++ b/11-DelegatesLambdasEvents/CountDownTestCA/CountDownTestCA.csproj
@@ -43,10 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FirstTestClass.cs" />
+    <Compile Include="entities\FirstTestClass.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SecondTestClass.cs" />
+    <Compile Include="entities\SecondTestClass.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
